# web-server-by-rust

./: Cargo.toml  table.txt
html/: 401.html  404.html  ai.html  dashboard.html  diary_work.html  diary_work1.html  diary_work2.html  diary_work3.html  hello.html  hello.js  index.html  login.html  long_work.html  long_work1.html  long_work2.html  long_work3.html  memory.html  memory1.html  memory2.html  register.html  test.html
js/: dashboard.js
log/: output.txt
src/: api.rs  database.rs  lib.rs  log.rs  login.rs  main.rs  network.rs  thread_pool.rs  tool.rs  url.rs
src/network/: http回应.rs  http请求.rs  router.rs
src/tool/: log.rs  thread_pool.rs  tool.rs
src/url/: ai.rs  diary_work.rs  long_work.rs  memory.rs
src/url/diary_work/: 调整计划.rs
