[package]
name = "startup_machine_91"
version = "0.1.0"
edition = "2021"

[dependencies]
project-root = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql={ version = "26.0", features = ["chrono"] } 
jsonwebtoken="9.3.1"
cookie = {version="0.18",features=["percent-encode"]}
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
regex = "1.10.4"